==> angfigueroa/PIC_a_ESP32/PRUEBA1/I2C.c <==
#include <xc.h>
#include "I2C.h"

void I2C_Master_Init()
{
    SSPCON = 0b00101000;
    SSPCON2 = 0;
    SSPADD = (_XTAL_FREQ/(4*c))-1;
    SSPSTAT = 0;
    TRISCbits.TRISC3 = 1;
    TRISCbits.TRISC4 = 1;
}
//*****************************************************************************
// Función de espera: mientras se esté iniciada una comunicación,
// esté habilitado una recepción, esté habilitado una parada
// esté habilitado un reinicio de la comunicación, esté iniciada
// una comunicación o se este transmitiendo, el IC2 PIC se esperará
// antes de realizar algún trabajo
//*****************************************************************************
void I2C_Master_Wait()
{
    while ((SSPSTAT & 0x04) || (SSPCON2 & 0x1F));
}
//*****************************************************************************
// Función de inicio de la comunicación I2C PIC
//*****************************************************************************
void I2C_Master_Start()
{
    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    SSPCON2bits.SEN = 1;    //inicia la comunicación i2c
}

void I2C_Start(char add)
{
    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    SSPCON2bits.SEN = 1;    //inicia la comunicación i2c
    I2C_Master_Write(add);
}
//*****************************************************************************
// Función de reinicio de la comunicación I2C PIC
//*****************************************************************************
void I2C_Master_RepeatedStart()
{
    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    SSPCON2bits.RSEN = 1;   //reinicia la comunicación i2c
}
//*****************************************************************************
// Función de parada de la comunicación I2C PIC
//*****************************************************************************
void I2C_Master_Stop()
{
    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    SSPCON2bits.PEN = 1;    //detener la comunicación i2c
    
}

void I2C_ACK(void)
{
    ACKDT = 0;
    ACKEN = 1;
    while(ACKEN);
}

void I2C_NACK(void)
{
    ACKDT = 1;
    ACKEN = 1;
    while(ACKEN);
}
//*****************************************************************************
//Función de transmisión de datos del maestro al esclavo
//esta función devolverá un 0 si el esclavo a recibido
//el dato
//*****************************************************************************
void I2C_Master_Write(unsigned char data)
{
    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    SSPBUF = data; 
    while(!SSPIF);
    SSPIF = 0;
    return ACKSTAT;
}
//*****************************************************************************
//Función de recepción de datos enviados por el esclavo al maestro
//esta función es para leer los datos que están en el esclavo
//*****************************************************************************
unsigned char I2C_Read_Byte(void)
{

    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    SSPCON2bits.RCEN = 1;
    while(!SSPIF);
    SSPIF = 0;
    I2C_Master_Wait();      //espera que se cumplan las condiciones adecuadas
    return SSPBUF;

}

unsigned char I2C_Read(unsigned char ACK_NACK)
{
    unsigned char Data;
    SSPCON2bits.RCEN = 1;
    while(!BF);
    Data = SSPBUF;
    if(ACK_NACK == 0)
        I2C_ACK();
    else
        I2C_NACK();
    while(!SSPIF);
    SSPIF = 0;
    return Data;
    
}
